src/App.css
body{
  font-family: Arial, Helvetica, sans-serif;
  background-color: #f4f4f4;
  padding: 30px;
  color: #333;
  background-image: url('./assets/Images/background.jpg');
}

.app{
  max-width: 600px;
  margin: 0 auto 200px;
  background-color: #efefef;
  padding: 20px 30px;
  border-radius: 10px;
}

h1{
  text-align: center;
}

h2{
  margin-bottom: 10px;
}

p{
  margin: 10px 0;
}

input{
  box-sizing: border-box;
}
/*Button Customization*/
button{
  background-color: #333;
  color: #fff;
  padding: 5px 10px;
  margin-right: 10px;
  border: none;
  border-radius: 3px;
  cursor: pointer;
  opacity: 0.75;
  transition: 0.2s;
}

button:hover{
  opacity:1;
}

.option-button{
  margin-top: -2rem;
}

.complete{
  background-color: #5cb85c;
}

.edit{
  background-color: #454ADE;
  margin-top: 4%;

}

.remove{
  background-color: #d9534f;
  margin-top: 10%;
}


.trophy-list{
  margin-bottom: 20px;
  padding-bottom: 20px;
  border-bottom: 1px solid #555;
  max-height: 400px;
  overflow-y: auto; 
}

.trophy{
  background-color: #fff;
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
  padding: 10px;
  margin-bottom: 10px;
  border-radius: 5px;
  display: block;
  justify-content: space-between;
  align-items: center;
}

.trophy-text{
  text-align: justify;
}

/*Trophy form Customization*/
.trophy-form{
  padding-bottom: 1.5rem;
}

input, select{
  padding: 5px;
  margin-bottom: 10px;
  border: 1px solid #ddd;
  border-radius: 3px;
  width: 100%;
}

.content {
  position: relative; 
  padding-bottom: 20px; 
}

.trophy-created-date {
  position: absolute;
  bottom: 5px;
  font-size: 0.85em;
  color: gray;
}
/*Filter customization*/
.filter, .search{
  border-bottom: 1px solid #555;
  margin-bottom: 20px;
  padding-bottom: 20px;
}

.filter-options{
  display: flex;
  justify-content: space-between;
  gap: 3rem;
}

.filter-options div{
  flex: 1 1 0;
}

.modal{
  background-color: #d9534f;
  border-radius: 3px;
  border: 1px solid #555;
  margin:2% 15%;
  color: #363537;

  text-align: center;
}

.modal-button{
  background-color: #DCED31;
  color: #333;
  margin-bottom: 2%;
}

/*Trophy success notification*/
.success-notification {
  position: fixed;
  top: 20px;
  right: 20px;
  background-color: #5cb85c;
  color: white;
  padding: 15px 20px;
  border-radius: 5px;
  font-weight: bold;
  opacity: 1;
  animation: fadeOut 4s forwards;
}

/*Trophy charts*/
.trophy-chart{
  width: "500px";
  margin: "20px auto";
}

.chart-title{
  text-align: center;
}

@keyframes fadeOut {
  0% { opacity: 1; }
  70% { opacity: 1; }  /* Keeps it visible for a while */
  100% { opacity: 0; } /* Disappears at the end of the animation */
}

@media (max-width: 768px) { 

  .filter h2{
    margin-bottom: 2%;
  }

  .filter-options {
    flex-direction: column; 
    gap: 1rem; 
  }

  .filter-options div {
    width: 100%; 
  }

  .trophy{
    display:block;
  }

  
}

